--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -1,8 +1,8 @@
 
-<div class="flex flex-col p-20 bg-gradient-to-r from-green-200 to-blue-300"> <!--container 1-->
+<div class="flex flex-col p-20 bg-gradient-to-r from-green-200 to-blue-300 h-2/3"> <!--container 1-->
 
     <div class="flex flex-row space-x-5"><!---div 1--->
-        <div class="flex flex-col flex-auto w-70 md:items-start pt-6"><!---div 1.1--->
+        <div class="flex flex-col flex-1 w-70 md:items-start pt-6"><!---div 1.1--->
             <div class="md:w-1/2 pb-6 mb-12 flex flex-row">
                 <div><svg fill="#000000" width="44px" height="44px" viewBox="0 0 128.00 128.00" id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" stroke="#000000" stroke-width="0.00128" transform="matrix(-1, 0, 0, 1, 0, 0)rotate(0)" class="mx-auto md:w-3/4" ><g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(26.240000000000002,26.240000000000002), scale(0.59)"><path transform="translate(0, 0), scale(8)" fill="#0270a7" d="M9.166.33a2.25 2.25 0 00-2.332 0l-5.25 3.182A2.25 2.25 0 00.5 5.436v5.128a2.25 2.25 0 001.084 1.924l5.25 3.182a2.25 2.25 0 002.332 0l5.25-3.182a2.25 2.25 0 001.084-1.924V5.436a2.25 2.25 0 00-1.084-1.924L9.166.33z" strokewidth="0"></path></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#b4f2f3" stroke-width="3.84"> <g> <path d="M28.8,91.7c9.7,9.7,22.5,14.6,35.2,14.6s25.5-4.9,35.2-14.6L126.9,64L99.2,36.3c-19.4-19.4-51.1-19.4-70.5,0L1.1,64 L28.8,91.7z M34.2,41.7c16.4-16.4,43.2-16.4,59.6,0L116.1,64L93.8,86.3c-16.4,16.4-43.2,16.4-59.6,0L11.9,64L34.2,41.7z"></path> <path d="M64,85c11.6,0,21-9.4,21-21s-9.4-21-21-21v8c7.2,0,13,5.8,13,13s-5.8,13-13,13s-13-5.8-13-13h-8C43,75.6,52.4,85,64,85z"></path> </g> </g><g id="SVGRepo_iconCarrier"> <g> <path d="M28.8,91.7c9.7,9.7,22.5,14.6,35.2,14.6s25.5-4.9,35.2-14.6L126.9,64L99.2,36.3c-19.4-19.4-51.1-19.4-70.5,0L1.1,64 L28.8,91.7z M34.2,41.7c16.4-16.4,43.2-16.4,59.6,0L116.1,64L93.8,86.3c-16.4,16.4-43.2,16.4-59.6,0L11.9,64L34.2,41.7z"></path> <path d="M64,85c11.6,0,21-9.4,21-21s-9.4-21-21-21v8c7.2,0,13,5.8,13,13s-5.8,13-13,13s-13-5.8-13-13h-8C43,75.6,52.4,85,64,85z"></path> </g> </g> </svg></div>
                 <div class="text-lg pt-2 font-normal">  SUPChain Secure </div>
@@ -11,56 +11,84 @@
                 <div> <!---sec&Int --->
                   <h2 class="text-8xl font-bold mb-6">
                     <div>Security</div>
-                    <div class="ps-36 text-2xl">and</div>
-                    <div class="pl-44">Integrity</div>
+                    <div class="ps-40 pt-4 text-2xl">&</div>
+                    <div>Integrity</div>
                   </h2>
                 </div>
                 <div class="flex space-x-4 mt-16">
                     <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Supplier</a>
-                    <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Buyer</a>
+                    <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Buyer</a>
                 </div>
             </div>
         </div>
-        <div class="flex-auto pt-16" ><!---div 1.2--->
-          <img src="../../../assets/images/landing-img2.png" alt="Image" width="600">
+        <div class="flex-1 pt-16" ><!---div 1.2--->
+          <img src="../../../assets/images/landing-img2.png" alt="Image" width="600" class="m-auto">
         </div>
     </div> 
   </div> <!--/container 1-->
 
   
-  <div class="flex flex-row pt-12 bg-gradient-to-r from-green-100 to-blue-300 p-20" ><!---container 2--->
-    <div class="flex flex-col space-y-8 pt-5"><!---div 2.1--->
+  <div class="flex flex-row pt-12 bg-gradient-to-r from-green-100 to-blue-300 p-20 h-2/3" ><!---container 2--->
+    <div class="flex flex-col flex-1 space-y-8 pt-5 "><!---div 2.1--->
       <div class="mt-9"><!---div 2.1.1---->
-        <h2 class="font-semibold text-2xl">Top Software Suppliers</h2>
+        <h2 class="font-semibold text-3xl">Top Software Suppliers</h2>
       </div>
-      <div class="pr-5"><!---div 2.1.2---->
+      <div class="pr-5 text-justify"><!---div 2.1.2---->
         <p>Supply chain attacks exploit the trust relationships between different organizations. All organizations have some degree of trust in other companies when they install and use software on their networks, or collaborate as part or vendor or contractor agreements.
         </p>
       </div>
 
     </div>
-    <div><!---div 2.2--->
-      <svg width="256px" height="256px" viewBox="0 0 64 64" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#f7efcf;} .st1{fill:#95f7f9;} .st2{fill:#8DD1D3;} .st3{fill:#330D00;} .st4{fill:none;stroke:#330D00;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;} </style> <g id="_x34_0-Id_Card"></g> <g id="_x33_9-Formula"></g> <g id="_x33_8-Elbow"></g> <g id="_x33_7-Diploma"></g> <g id="_x33_6-Laptop"> <g> <g> <path class="st1" d="M58.1,41H5.9c-0.6,0-1-0.4-1-1V8.2c0-0.6,0.4-1,1-1h52.2c0.6,0,1,0.4,1,1V40C59.1,40.6,58.6,41,58.1,41z"></path> </g> <g> <path class="st0" d="M60.6,56.8H3.4c-1.5,0-2.6-1.4-2.2-2.9l3.2-11.3c0.3-1,1.2-1.6,2.2-1.6h50.8c1,0,1.9,0.7,2.2,1.6L62.8,54 C63.2,55.4,62.1,56.8,60.6,56.8z"></path> </g> <g> <g> <path class="st3" d="M63.9,53.6l-3.2-11.3c-0.2-0.7-0.6-1.2-1.1-1.6c0.4-0.6,0.6-1.2,0.6-2V9.4c0-1.9-1.5-3.4-3.4-3.4H7.2 C5.3,6,3.8,7.6,3.8,9.4v29.3c0,0.7,0.2,1.4,0.6,2c-0.5,0.4-0.9,1-1.1,1.6L0.1,53.6c-0.3,1-0.1,2.1,0.6,3C1.3,57.5,2.3,58,3.4,58 h57.2c1.1,0,2.1-0.5,2.7-1.3C64,55.8,64.2,54.7,63.9,53.6z M6,9.4c0-0.6,0.5-1.1,1.1-1.1h49.7c0.6,0,1.1,0.5,1.1,1.1v29.3 c0,0.6-0.5,1.1-1.1,1.1H7.2c-0.6,0-1.1-0.5-1.1-1.1V9.4z M61.5,55.3c-0.2,0.3-0.5,0.4-0.9,0.4H3.4c-0.4,0-0.7-0.2-0.9-0.4 c-0.2-0.3-0.3-0.6-0.2-1L5.5,43c0.1-0.5,0.6-0.8,1.1-0.8h0.6h49.7h0.6c0.5,0,0.9,0.3,1.1,0.8l3.2,11.3 C61.8,54.6,61.7,55,61.5,55.3z"></path> </g> <g> <path class="st3" d="M29.7,12.8h4.5c0.6,0,1.1-0.5,1.1-1.1c0-0.6-0.5-1.1-1.1-1.1h-4.5c-0.6,0-1.1,0.5-1.1,1.1 C28.6,12.3,29.1,12.8,29.7,12.8z"></path> </g> <g> <path class="st3" d="M53.4,44.4H10.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h42.9c0.6,0,1.1-0.5,1.1-1.1S54.1,44.4,53.4,44.4z"></path> </g> <g> <path class="st3" d="M42.2,51.2H21.8c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h20.3c0.6,0,1.1-0.5,1.1-1.1S42.8,51.2,42.2,51.2z"></path> </g> </g> </g> </g> <g id="_x33_5-Brush"></g> <g id="_x33_4-Baseball"></g> <g id="_x33_3-Student"></g> <g id="_x33_2-Highlighter"></g> <g id="_x33_1-Ruler"></g> <g id="_x33_0-Caliper"></g> <g id="_x32_9-Ruler_Elbow"></g> <g id="_x32_8-Abacus"></g> <g id="_x32_7-Id_Card"></g> <g id="_x32_6-Eraser"></g> <g id="_x32_5-Pencil"></g> <g id="_x32_4-Ink"></g> <g id="_x32_3-Graduation_Cap"></g> <g id="_x32_2-_Sling_Bag"></g> <g id="_x32_1-Rugby_Ball"></g> <g id="_x32_0-Clock"></g> <g id="_x31_9-Certificate"></g> <g id="_x31_8-Idea"></g> <g id="_x31_7-Bookshelf"></g> <g id="_x31_6-Formula"></g> <g id="_x31_5-Bell"></g> <g id="_x31_4-Magnifying_Glass"></g> <g id="_x31_3-Calculator"></g> <g id="_x31_2-Eyeglasses"></g> <g id="_x31_1-Bus"></g> <g id="_x31_0-Trophy"></g> <g id="_x39_-Globe"></g> <g id="_x38_-Basket_Ball"></g> <g id="_x37_-Pen"></g> <g id="_x36_-Board"></g> <g id="_x35_-Bag"></g> <g id="_x34_-Exam"></g> <g id="_x33_-Book"></g> <g id="_x32_-Ruler"></g> <g id="_x31_-Building"></g> </g></svg>
+    <div class="flex-1 pb-20 pt-20 pl-10"><!---div 2.2--->
+      <img src="../../../assets/images/landing-img3.jpg" alt="infoImg" class="rounded-tr-3xl m-auto">
     </div>
-  </div><!--/container 2-->
+
+</div><!--/container 2-->
 
   
-  <div class="" ><!---div 3--->
-    <div><!---div 3.1--->
-      <div><!---div 3.1.1---->
+<div class="flex flex-col pt-12 p-20 bg-gradient-to-r from-green-100 to-blue-400 h-3/4" ><!---container 3--->
+
+    <div class="m-auto"><!---div 3.0--->
+        <h2 class="font-semibold text-3xl">Purchase By Supplier</h2>
+    </div>
+
+    <div class="flex flex-row mt-5 space-x-5"><!---div 3.1--->
+      <div class=" flex-col bg-slate-200 m-auto p-2 rounded-tr-3xl rounded-bl-3xl "><!---div 3.1.1--->
+        <div><!---div 3.1.1.1---->
+          <img src="../../../assets/images/lock1.webp" alf="shopByImg" width="170" class="rounded-tr-3xl">
+        </div>
+        <div class="text-center mt-2 max-w-40 p-1"><!---div 3.1.1.2---->
+          <h2 class="text-sm font-bold shrink mb-2 "> Oracle Software Supply</h2>
+          <p class="shrink text-xs mb-3">All organizations have some degree of trust in other companies</p>
+        </div>
         
-      </div>
-      <div><!---div 3.1.2---->
-      
-      </div>
-      <div><!---div 3.1.3---->
-      
       </div>
 
     </div>
-  </div>
-  <div><!---div 4--->
-    
+
+    <div class="mt-5 m-auto"><!---div 3.2---->
+      <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 hover:opacity-100 opacity-75">Purchase All</a>
+    </div>
+
+  </div><!---/container 3--->
+<div class="flex flex-row pt-12 p-20 bg-gradient-to-r from-green-50 to-blue-400 space-x-8 h-96"><!---container 4--->
+    <div class="flex-1">
+      <h2 class="font-semibold text-3xl">Contact with us</h2>
+    </div>
+    <div class="flex flex-row flex-1">
+      <div class="flex-1">
+        <h3 class="font-semibold text-lg">Main Office</h3>
+        <p>MTU North Campus, Tralee, Co. Kerry</p>
+      </div>
+      <div class="flex-1">
+        <h3 class="font-semibold text-lg">Social Media</h3>
+        <ul>
+          <li>Facebook</li>
+          <li>LinkedIn</li>
+          <li>Twitter</li>
+        </ul>
+      </div>
+    </div>
 </div>
 
 
