--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -16,8 +16,8 @@
                   </h2>
                 </div>
                 <div class="flex space-x-4 mt-16">
-                    <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Supplier</a>
-                    <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Buyer</a>
+                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Supplier</a>
+                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Buyer</a>
                 </div>
             </div>
         </div>
