--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -1,24 +1,25 @@
 
-<div class="flex flex-col p-20 bg-gradient-to-r from-green-200 to-blue-300 h-2/3"> <!--container 1-->
+<div class="flex flex-col p-20 bg-gradient-to-r from-green-200 to-blue-300 h-2/7"> <!--container 1-->
 
     <div class="flex flex-row space-x-5"><!---div 1--->
-        <div class="flex flex-col flex-1 w-70 md:items-start pt-6"><!---div 1.1--->
+        <div class="flex flex-col flex-1 md:items-start pt-6"><!---div 1.1--->
             <app-header class="md:w-1/2 pb-6 mb-12 flex flex-row"></app-header>
-            <div class="md:w-1/2 text-left md:ml-8 mt-8 md:mt-0">
-                <div> <!---sec&Int --->
-                  <h2 class="text-8xl font-bold mb-6">
+            <div class="text-left md:ml-8 mt-8 md:mt-0">
+                <div class="w-500"> <!---sec&Int --->
+                  <h2 class="text-8xl font-semibold">
+                    <div>SWID tags</div>
                     <div>Security</div>
-                    <div class="ps-40 pt-4 text-2xl">&</div>
+                    <div class="pt-4 text-2xl">&</div>
                     <div>Integrity</div>
                   </h2>
                 </div>
                 <div class="flex space-x-4 mt-16">
-                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Supplier</a>
-                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Buyer</a>
+                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Producers</a>
+                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Consumers</a>
                 </div>
             </div>
         </div>
-        <div class="flex-1 pt-16" ><!---div 1.2--->
+        <div class="flex-1 pt-16 w-1/2" ><!---div 1.2--->
           <img src="../../../assets/images/landing-img2.png" alt="Image" width="600" class="m-auto">
         </div>
     </div> 
