--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -7,15 +7,14 @@
             <div class="text-left md:ml-8 mt-8 md:mt-0">
                 <div class="w-500"> <!---sec&Int --->
                   <h2 class="text-8xl font-semibold">
-                    <div>SWID tags</div>
-                    <div>Security</div>
-                    <div class="pt-4 text-2xl">&</div>
-                    <div>Integrity</div>
+                    <div>Software</div>
+                    <div>Vulnerability</div>
+                    <div>Check</div>
                   </h2>
                 </div>
                 <div class="flex space-x-4 mt-16">
-                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Producers</a>
-                    <a (click)="onNav()" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Consumers</a>
+                    <a (click)="onNavigateToUserPage('producer')" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700">Producers</a>
+                    <a (click)="onNavigateToUserPage('consumer')" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 opacity-75">Consumers</a>
                 </div>
             </div>
         </div>
@@ -29,7 +28,7 @@
   <div class="flex flex-row pt-12 bg-gradient-to-r from-green-100 to-blue-300 p-20 h-2/3" ><!---container 2--->
     <div class="flex flex-col flex-1 space-y-8 pt-5 "><!---div 2.1--->
       <div class="mt-9"><!---div 2.1.1---->
-        <h2 class="font-semibold text-3xl">Top Software Suppliers</h2>
+        <h2 class="font-semibold text-3xl">Top Software Producers</h2>
       </div>
       <div class="pr-5 text-justify"><!---div 2.1.2---->
         <p>Supply chain attacks exploit the trust relationships between different organizations. All organizations have some degree of trust in other companies when they install and use software on their networks, or collaborate as part or vendor or contractor agreements.
@@ -47,7 +46,7 @@
 <div class="flex flex-col pt-12 p-20 bg-gradient-to-r from-green-100 to-blue-400 h-3/4" ><!---container 3--->
 
     <div class="m-auto"><!---div 3.0--->
-        <h2 class="font-semibold text-3xl">Purchase By Supplier</h2>
+        <h2 class="font-semibold text-3xl">Visit By Producers</h2>
     </div>
 
     <div class="flex flex-row mt-5 space-x-5"><!---div 3.1--->
@@ -65,7 +64,7 @@
     </div>
 
     <div class="mt-5 m-auto"><!---div 3.2---->
-      <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 hover:opacity-100 opacity-75">Purchase All</a>
+      <a href="#" class="bg-gray-100 text-black font-semibold py-2 px-4 rounded shadow hover:bg-sky-700 hover:opacity-100 opacity-75">Visit All</a>
     </div>
 
   </div><!---/container 3--->
