Implemented feature to get Cognito groups belonging to current authenticated users

--- a/src/app/components/consumers/consumers.component.html
+++ b/src/app/components/consumers/consumers.component.html
@@ -1,1 +1,5 @@
-<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>
+<div class="flex flex-row w-full h-48 border border-black p-20 bg-gradient-to-r from-green-200 to-blue-300">
+    <app-header class="md:w-1/2 pb-6 mb-12 flex flex-row"></app-header>
+</div>
+<!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
+<app-footer class="absolute bottom-0 w-full"></app-footer>
