--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -1,1 +1,21 @@
-<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>
+<div class="flex flex-row h-48 left-0 top-0 min-w-full border border-black p-20 bg-gradient-to-r from-green-200 to-blue-300">
+    <app-header class="pb-6 mb-12 flex flex-row"></app-header>
+</div>
+<div class="flex flex-column mt-5 relative border border-black p-20">
+    <div class="">
+        <div class=" flex flex-row space-x-9 border border-black ">
+            <div>sdsdsd</div>
+            <div>sdsdsd</div>
+            <div>sdsdsd</div>
+            <div>sdsdsd</div>
+            <div>sdsdsd</div>
+            <button>sdsdsd</button>
+            <button>sdsdsd</button>
+        </div>
+
+        <button class="button absolute bottom-0 right-16 flex items-center bg-cyan-900 text-white px-4 py-2 w-48 h-12 mb-2 rounded-full"> Add Project <div class="icon material-symbols-outlined flex items-center justify-center absolute right-0 rounded-full px-3 p-2 h-12 bg-cyan-900 text-white-500 border-5 border-white">add</div></button>
+    </div>
+    
+</div>
+<!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
+<app-footer class="fixed left-0 bottom-0 min-w-full"></app-footer>
