Added and designed a component to add new products

--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -13,9 +13,10 @@
             <button>sdsdsd</button>
         </div>
 
-        <button class="button absolute bottom-0 right-16 flex items-center bg-cyan-900 text-white px-4 py-2 w-48 h-12 mb-2 rounded-full"> Add Project <div class="icon material-symbols-outlined flex items-center justify-center absolute right-0 rounded-full px-3 p-2 h-12 bg-cyan-900 text-white-500 border-5 border-white">add</div></button>
+        <button class="button absolute bottom-0 right-16 flex items-center bg-cyan-900 text-white px-4 py-2 w-48 h-12 mb-2 rounded-full" (click)="onAddNewProduct()"> Add Product <div class="icon material-symbols-outlined flex items-center justify-center absolute right-0 rounded-full px-3 p-2 h-12 bg-cyan-900 text-white-500 border-5 border-white">add</div></button>
     </div>
     
 </div>
 <!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
-<app-footer class="fixed left-0 bottom-0 min-w-full"></app-footer>
+<!--<app-addproduct></app-addproduct>-->
+<app-footer class="absolute left-0 bottom-0 min-w-full"></app-footer>
