feat: Add functionality to display and close the add product form

--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -18,5 +18,5 @@
     
 </div>
 <!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
-<!--<app-addproduct></app-addproduct>-->
+<app-addproduct *ngIf=displayAddNewProduct></app-addproduct>
 <app-footer class="absolute left-0 bottom-0 min-w-full"></app-footer>
