--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -2,7 +2,7 @@
     
     <div class="form-modal-content border border-white w-3/5 p-3 text-white">
         <div class="flex justify-end mb-1">
-            <span class="material-symbols-outlined form-modal-close" (click)="onCloseAddProductForm()">
+            <span class="material-symbols-outlined form-modal-close" (click)="addProduct.onCloseAddNewProduct()">
                 close
                 </span>
         </div>
