--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -27,7 +27,7 @@
                 </div>
                 
             </div>
-            <button type="submit" class="btn btn-primary">Proceed</button>
+            <button type="submit" class="btn btn-primary" (click)="onGetPro()">Proceed</button>
         </form>
     </div>
 
