refactor: Graphql API features and producers and consumers components refactored. And create a custom ListProduct mutation for fetching a subset of product data

--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -32,7 +32,7 @@
                 </div>
                 
             </div>
-            <button type="submit" class="btn btn-primary" [disabled]="!disabledProceedBtn || name.errors || description.errors || price.errors">Proceed</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!activateProceedBtn || name.errors || description.errors || price.errors">Proceed</button>
             <!--<div *ngIf="inProgress" class="text-black">Upload progress: {{ progress }}%</div>-->
         </form>
     </div>
