--- a/src/app/components/consumers/consumers.component.html
+++ b/src/app/components/consumers/consumers.component.html
@@ -1,5 +1,31 @@
-<div class="flex flex-row w-full h-48 border border-black p-20 bg-gradient-to-r from-green-200 to-blue-300">
-    <app-header class="md:w-1/2 pb-6 mb-12 flex flex-row"></app-header>
+<div class="flex flex-row h-48 left-0 top-0 max-w-full p-20 bg-gradient-to-r from-green-200 to-blue-300">
+    <app-header class="pb-6 mb-12 flex flex-row"></app-header>
 </div>
-<!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
-<app-footer class="absolute bottom-0 w-full"></app-footer>
+<div class="flex flex-column mt-5 ml-2 mr-2 mb-5 static ">
+    <div class="flex flex-row flex-1 w-full bg-gray-200 mb-2 justify-evenly rounded-md">
+      <div class="w-1/6 pl-4 ">Name</div>
+      <div class="w-1/2 pl-9">Description</div>
+      <div class="w-1/6">Created</div>
+      <div class="w-1/6 pl-3">Severity</div>
+      <div class="w-1/6">Price</div>
+    </div>
+    <div *ngFor="let product of consumerFetchResult">
+      <div class="product-detail-box flex flex-row items-center justify-evenly mb-2 font-semibold static">
+        <div class="flex flex-1 flex-row w-full">
+          <div class="product-img ">
+            <img src="../../../assets/images/org0.jpg" class="border border-black" alt="Product Image"> 
+          </div>
+          <div class="truncate w-1/5 pl-2 py-3">{{ product.name }}</div>
+          <div class="truncate w-3/5 pl-2 py-3">dfsfsfsfsfsfsfsfsfsfsfsfsfsfsfsfsfsfsfsssssssssssssssssssssssssssss</div>
+          <div class="truncate w-1/4 pl-2 py-3">{{ product.date }}</div>
+          <div class="w-1/6 pl-4 py-3"><span>{{ 'pass' || product.vulnerabilityState }}</span></div>
+          <div class="w-1/5 pl-4 py-3">{{ product.price | currency: 'EUR' }}</div>
+        </div>
+        <div class="flex space-x-2">
+          <button class="btn btn-primary">Visit</button>
+        </div>
+      </div>
+    </div>
+    </div>
+<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>
+<app-footer class="static w-full"></app-footer>
