--- a/src/app/components/producers/producers.component.css
+++ b/src/app/components/producers/producers.component.css
@@ -1,11 +1,3 @@
-.button:hover,
-.button:hover .icon {
-    box-shadow: 0 10px 15px -3px rgba(59, 130, 246, 0.5), 0 4px 6px -2px rgba(59, 130, 246, 0.5);
-}
-
-.button:hover .icon {
-    height: 4rem;
-}
 
 
 .material-symbols-outlined {
@@ -14,6 +6,12 @@
     'wght' 400,
     'GRAD' 0,
     'opsz' 24
+  }
+  .product-detail-box {
+
+    border-radius: 1rem;
+    background-color: #faffff;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   }
  .product-detail-box .product-img {
     border-radius: 9999px;
@@ -31,3 +29,12 @@
 .product-detail-box button:hover {
     background-image: linear-gradient(to right, #245f86, #78cbfc);
   }
+
+.button:hover,
+.button:hover .icon {
+    box-shadow: 0 10px 15px -3px rgba(59, 130, 246, 0.5), 0 4px 6px -2px rgba(59, 130, 246, 0.5);
+}
+
+.button:hover .icon {
+    height: 4rem;
+}
