refactor: Refactor root, consumers, and producers components to use BehaviorSubject of event observation

--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -9,7 +9,7 @@
     <div class="w-56 pl-6 ">Severity</div>
     <div class="w-1/4 pl-9">Price</div>
   </div>
-  <div *ngFor="let product of producerFetchResult">
+  <div *ngFor="let product of productDocs">
     <div class="product-detail-box flex flex-row items-center justify-evenly mb-2 font-semibold static">
       <div class="flex flex-1 flex-row w-full">
         <div class="product-img ">
