feat: Add severity details on UI

--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -28,7 +28,7 @@
                 </div>
                 <h3 class="font-semibold mt-3 mb-2">Upload a file</h3>
                 <div class="upload-box-space flex justify-center border-dashed border-2 border-gray-300">
-                    <input type="file" name="file" class="file-input" (change)="onArtifactInput($event)">
+                    <input type="file" name="file" class="file-input" (change)="onProductInput($event)">
                 </div>
                 
             </div>
