refactor: Adjust producer and consumer UI components

--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -1,14 +1,14 @@
-<div class="form-modal border border-black bg-gray-900 max-w-full max-h-full z-1 top-0 left-0 bottom-0 right-0 fixed pt-36 pb-56 flex justify-center">
+<div class="form-modal border border-black bg-gray-900 max-w-full max-h-full z-1 top-0 left-0 bottom-0 right-0 fixed flex justify-center">
     
-    <div class="form-modal-content border border-white w-3/5 p-3 text-white">
+    <div class="form-modal-content border border-white w-3/5 h-3/5 my-40 p-3 text-white">
         <div class="flex justify-end mb-1">
-            <span class="material-symbols-outlined form-modal-close" (click)="producersComponent.closeAddProductForm()">
+            <span class="material-symbols-outlined form-modal-close" (click)="producersComponent.closeAddProductModal()">
                 close
                 </span>
         </div>
         
         <form class="form-horizontal rounded p-8 bg-white flex flex-col space-y-4" name="form"
-        (ngSubmit)="f.form.valid && onSubmitProductDetails()" #f="ngForm">
+        (ngSubmit)="f.form.valid && submitProductDetails()" #f="ngForm">
 
             <div class="border border-black">
                 <input type="text" name="name" placeholder="Enter product name" #name="ngModel" [(ngModel)]="product.name" required>
@@ -28,7 +28,7 @@
                 </div>
                 <h3 class="font-semibold mt-3 mb-2">Upload a file</h3>
                 <div class="upload-box-space flex justify-center border-dashed border-2 border-gray-300">
-                    <input type="file" name="file" class="file-input" (change)="onProductInput($event)">
+                    <input type="file" name="file" class="file-input" (change)="handleProductInput($event)">
                 </div>
                 
             </div>
