--- a/src/app/components/producers/producers.component.css
+++ b/src/app/components/producers/producers.component.css
@@ -39,3 +39,8 @@
 .button:hover .icon {
     height: 4rem;
 }
+.severity-details span:hover{
+  color: #0488e0;
+  cursor: pointer;
+  background-image: linear-gradient(to right, #245f86, #78cbfc);
+}
