--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row pt-12 p-20 bg-gradient-to-r from-green-50 to-blue-400 space-x-8 h-96"><!---container 4--->
+<div class="flex flex-row pt-12 p-20 bg-gradient-to-r from-green-50 to-blue-400 space-x-8 h-96 relative"><!---container 4--->
     <div class="flex-1">
       <h2 class="font-semibold text-3xl">Contact with us</h2>
     </div>
