refactor: Adjust file input styling and button placement

--- a/src/app/components/addproduct/addproduct.component.css
+++ b/src/app/components/addproduct/addproduct.component.css
@@ -35,12 +35,14 @@
 .file-input {
     color:transparent;
     width:25%;
+    text-align: center;
+    width: 13%;
 }
 .file-input::-webkit-file-upload-button {
     visibility: hidden;
 }
 .file-input::before {
-    content: 'clicking here';
+    content: 'Click here..';
     color:blue;
     cursor:pointer;
     font-weight: 600;
