--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="w-1/6 pl-8 py-3">{{ product.price | currency: 'EUR' }}</div>
         
-        <div class="flex space-x-2 p-4">
+        <div class="flex space-x-2 h-9 mt-2">
           <button class="btn btn-primary">Update</button>
           <button class="btn btn-primary">Delete</button>
         </div>
